# savvy-cleanse-analysis

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  clone_repo.sh  codex_handoff.yaml  config.yaml  daily_report.txt  eslint.config.js  github_repos_list.json  github_repos_manager.py  index.html  list_github_repos.py  package-lock.json  package.json  pr_status.yaml  pyproject.toml  story.yaml  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml
_bmad-output/: codex-handoff.md  daily-handoff.md  project-context.md  sonnet-handoff.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding-pipeline-foundation.md  1-2-data-quality-assessment-engine.md  1-3-insight-engine.md  1-4-llm-narrative-generation.md  1-5-document-rendering.md  1-6-pipeline-orchestration-cli-entry-point.md  2-1-configuration-layer.md  2-2-llm-client-abstraction.md  2-2b-harden-llm-client-multi-caller.md  2-3-drift-engine.md  2-4-reporting-agent.md  2-5-monitoring-agent-alert-delivery.md  3-1-classification-layer.md  3-2-cleaning-engine-core.md  3-4-opt-in-gate-config.md  R-1-code-rename-savvycortex-to-saint.md  deferred-work.md  epic-10-prescriptive-simulation.md  epic-11-autonomous-judgment-eval-governance.md  epic-12-adapter-scoring.md  epic-13-marketing-vertical-ab.md  epic-14-financial-vertical.md  epic-15-healthcare-vertical.md  epic-3-cleaning-engine.md  epic-4-web-application.md  epic-5-subscription-billing.md  epic-6-multitenant-scale.md  epic-7-admin-control-plane.md  epic-8-advanced-analytics.md  epic-9-advanced-drift-rootcause.md  loop-runner-spec.md  prd-epic-reconciliation.md  saint-design-tokens.css  schema-extensions-spec.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md  saint-master-prd-original.docx  saint-master-prd.md  sprint-change-proposal-2026-06-30.md
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
agent-system/: README.md  handoff_loop.py
agent-system/prompts/: codex-worker.md
agent-system/tests/: test_handoff_loop.py
archive/: prd-six-phase-roadmap-DEPRECATED.md
backend/: advanced_pipeline.py  analytics.py  cleaner.py  comprehensive_analytics.py  dashboard_api.py  main.py  main_enhanced.py  nlp_processor.py  requirements.txt
backend/agents/: monitoring_agent.py  reporting_agent.py
backend/api/: __init__.py  app.py  parse_file.py
backend/core/: __init__.py  extraction_client.py  llm_client.py  logging.py
backend/errors/: exceptions.py
backend/models/: alert.py  cleaning_result.py  drift_report.py  insight_payload.py  insight_report.py  parsed_file.py  (+3 more)
src/: App.tsx  index.css  main.tsx
supabase/: SUPABASE_ISSUES_ANALYSIS.md  config.toml
(+105 files in other folders)
