[project]
name = "savvycortex"
version = "0.1.0"
description = "SavvyCortex data quality and insight pipeline."
requires-python = ">=3.13"
dependencies = [
    "docxtpl>=0.20.2",
    "weasyprint>=68.1",
    "jinja2>=3.1",
    "structlog>=24.0",
    "pydantic>=2.0",
    "typer>=0.12.1",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "email-validator>=2.0",
    "python-dotenv>=1.0",
]

[dependency-groups]
# Test-time deps so `uv run pytest backend/tests/` works out of the box.
# Runtime-only extras used by legacy modules stay in backend/requirements.txt.
dev = [
    "pytest>=8.2",
    "pytest-cov",
    "pandera==0.30.1",
    "fastapi",
    "openpyxl",
    "httpx",
    "python-multipart",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = [
    "integration: stage-to-stage tests that exercise multiple pipeline modules together",
    "e2e: end-to-end tests that run the CLI or API against a real CSV fixture",
]
