[project]
name = "saint"
version = "0.1.0"
description = "SAINT data quality and insight pipeline."
requires-python = ">=3.13"
dependencies = [
    "docxtpl>=0.20.2",
    "weasyprint>=68.1",
    "jinja2>=3.1",
    "structlog>=24.0",
    "pydantic>=2.0",
    "typer>=0.12.1",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "email-validator>=2.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "pandera>=0.30",
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "pillow>=12.3.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = [
    "integration: stage-to-stage tests that exercise multiple pipeline modules together",
    "e2e: end-to-end tests that run the CLI or API against a real CSV fixture",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "httpx>=0.27",
]
